<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/victor" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_image"
        android:layout_below="@+id/profile_image"
        android:layout_marginTop="18dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/birth_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="20dp"
        android:text="@string/birth_year_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/birth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/birth_year_label"
        android:layout_alignBottom="@+id/birth_year_label"
        android:layout_alignRight="@+id/profile_image"
        android:layout_toRightOf="@+id/birth_year_label"
        android:gravity="right"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/occupation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/birth_year_label"
        android:layout_below="@+id/birth_year_label"
        android:text="@string/occupation_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/occupation_label"
        android:layout_below="@+id/occupation_label"
        android:text="@string/phone_number_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/occupation_label"
        android:layout_alignBottom="@+id/occupation_label"
        android:layout_alignRight="@+id/birth_year"
        android:layout_toRightOf="@+id/occupation_label"
        android:gravity="right"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/birth_year"
        android:layout_alignRight="@+id/occupation"
        android:layout_below="@+id/occupation"
        android:gravity="right"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
